# engine2

./: .gitignore  CMakeLists.txt  README.md
.cursor/rules/: boilderplate.mdc
LICENSES/: GLM_LICENSE.txt  stb_LICENSE.txt  tinygltf_LICENSE.txt
assets/: captain_pork.glb  shader.frag  shader.vert
src/: Camera.cpp  Camera.h  GLTFImporter.cpp  GLTFImporter.h  ImageLoader.cpp  ImageLoader.h  Mesh.cpp  Mesh.h  Scene.h  SceneNode.cpp  SceneNode.h  VulkanApp.cpp  VulkanApp.h  Win32Window.cpp  Win32Window.h  main.cpp  stb_implementations.cpp
